Major User visible changes in Buildslave.             -*- outline -*-
   see the git log for a detailed list of changes:
   http://github.com/buildbot/buildbot/commits/master

* Next Release

** Log Rotation

The default 'create-slave' output now rotates ten twistd.log files, each of
about 10MiB.  This is a change from older versions, which would rotate an
unbounded number of 1MiB files.

* Buildbot 0.8.1

** First release of buildslave as a separate package

** Fixes

*** Command-line options changed

Added new `-n|--no-logrotate` flag to create-slave command which disables
internal logging and log rotation mechanism in buildbot.tac (ticket #973)

*** Delete srcdir before retrying git clone (ticket #884)

*** Fix setup.py to install a launcher script properly in all cases.