@@ -1,4 +1,5 @@
 import os.path
+import socket
 import sys
 
 from twisted.spread import pb
@@ -431,6 +432,7 @@ class BuildSlave(service.MultiService):
                  keepalive, usePTY, keepaliveTimeout=30, umask=None,
                  maxdelay=300, unicode_encoding=None):
         log.msg("Creating BuildSlave -- version: %s" % buildslave.version)
+        self.recordHostname()
         service.MultiService.__init__(self)
         bot = Bot(basedir, usePTY, unicode_encoding=unicode_encoding)
         bot.setServiceParent(self)
@@ -442,6 +444,14 @@ class BuildSlave(service.MultiService):
         bf.startLogin(credentials.UsernamePassword(name, passwd), client=bot)
         self.connection = c = internet.TCPClient(buildmaster_host, port, bf)
         c.setServiceParent(self)
+
+    def recordHostname(self):
+        "Record my hostname in twistd.hostname, for user convenience"
+        log.msg("recording hostname in twistd.hostname")
+        try:
+            open("twistd.hostname", "w").write("%s\n" % socket.getfqdn())
+        except:
+            log.msg("failed - ignoring")
 
     def startService(self):
         if self.umask is not None:
