@@ -10,6 +10,12 @@ The default 'create-slave' output now rotates ten twistd.log files, each of
 about 10MiB.  This is a change from older versions, which would rotate an
 unbounded number of 1MiB files.
 
+** twistd.hostname
+
+On startup, the buildslave writes its hostname to twistd.hostname.  This is
+intended to contextualize twistd.pid, which does not specify the host on which
+the buildslave is running.
+
 * Buildbot 0.8.1
 
 ** First release of buildslave as a separate package
